# ecommerce-price-analysis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  generate_demo_data.py  pyproject.toml  simple_demo_generator.py  test_system.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml
docs/: api.md
examples/: basic_usage.py  chinese_platforms_example.py
examples/config/: config.yaml
src/ecommerce_price_monitor/: __init__.py  cli.py  config.py
src/ecommerce_price_monitor/analyzers/: __init__.py  base_analyzer.py  comparison_analyzer.py  price_analyzer.py  statistical_analyzer.py  trend_analyzer.py
src/ecommerce_price_monitor/collectors/: __init__.py  amazon_collector.py  base_collector.py  douyin_collector.py  ebay_collector.py  jd_collector.py  price_collector.py  taobao_collector.py  walmart_collector.py  xiaohongshu_collector.py
src/ecommerce_price_monitor/exporters/: __init__.py  data_exporter.py
src/ecommerce_price_monitor/utils/: __init__.py  chinese_text_processor.py  database.py  exceptions.py  helpers.py  logging_config.py
src/ecommerce_price_monitor/visualizers/: __init__.py  base_visualizer.py  price_visualizer.py
src/tests/: __init__.py  test_analyzers.py  test_collectors.py
